Opened 16 years ago

Closed 16 years ago

#3749 closed bug (fixed)

Tab drawing issue

Reported by: jonas.kirilla Owned by: stippi
Priority: normal Milestone: R1
Component: Kits/Interface Kit Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Moving a window over the tab header view leaves lines behind every once in a while. To reproduce, move a Tracker window over the tabs of the Fonts preflet.

See screenshot. (I had to work a while to get all colors in the same screenshot. Only one color happens at a time, AFAIK.)

The cause of this could be in the kits or in the app_server. Clipping issue?

Attachments (1)

drawing_issue.png (24.5 KB ) - added by jonas.kirilla 16 years ago.

Download all attachments as: .zip

Change History (4)

by jonas.kirilla, 16 years ago

Attachment: drawing_issue.png added

comment:1 by aldeck, 16 years ago

I found out it was easier to reproduce when hovering the tab with the bottom right corner of a window. Didn't binary search for the exact rev, but at least i can confirm it was present in hrev29227 (ie: soon after the new look update)

comment:2 by stippi, 16 years ago

Owner: changed from axeld to stippi
Status: newassigned

comment:3 by stippi, 16 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev31821.

Note: See TracTickets for help on using tickets.